# opengrok-aosp-mcp

./: .gitignore  PROJECT_FILES.md  README.md  SUMMARY.md  TEST_REPORT.md  config.example.json  demo.py  install.sh  pyproject.toml  server.py  test_all.py  test_all_tools.py  test_connection.py  test_milestone2.py  test_milestone3.py  test_milestone4_7.py  test_milestone8.py
core/: __init__.py  cache.py  opengrok_client.py  token_optimizer.py
tools/: __init__.py  advanced_aosp.py  aidl_binder.py  basic.py  intelligent.py  system_service_jni.py
